# snark_accumulator

./: .gitignore  Cargo.toml
src/: evm_accumulator.rs  halo2_verifier.rs  lib.rs  mul.rs
